--- a/ansible_new.cfg
+++ b/ansible_new.cfg
@@ -134,7 +134,7 @@
 ;hash_behaviour=replace
 
 # (pathlist) Comma-separated list of Ansible inventory sources
-inventory=/home/paul-brade/pb_ansible_masterclass/inventory/cisco_inv.yml
+;inventory=/etc/ansible/hosts
 
 # (pathspec) Colon-separated paths in which Ansible will search for HttpApi Plugins.
 ;httpapi_plugins=/home/paul-brade/.ansible/plugins/httpapi:/usr/share/ansible/plugins/httpapi
@@ -848,7 +848,7 @@ inventory=/home/paul-brade/pb_ansible_masterclass/inventory/cisco_inv.yml
 ;control_path_dir=~/.ansible/cp
 
 # (boolean) Determines if SSH should reject or not a connection after checking host keys.
-host_key_checking=False
+;host_key_checking=True
 
 # (boolean) Pipelining reduces the number of connection operations required to execute a module on the remote server, by executing many Ansible modules without actual file transfers.
 # This can result in a very significant performance improvement when enabled.
