--- a/01_config/check_ansible_config.yml
+++ b/01_config/check_ansible_config.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: same_host
-  # gather_facts: false
+- hosts: localhost
+  gather_facts: false
   tasks:
     - name: Print ansible Config location
       ansible.builtin.debug:
         msg: 
          - "{{ ansible_config_file }}"
-         - "{{ inventory_file }}"
          - "{{ ansible_facts }}"
+         - "{{ inventory_file }}"
