--- a/07_ios_config_config_demo/04_config_source_demo.yml
+++ b/07_ios_config_config_demo/04_config_source_demo.yml
@@ -3,15 +3,12 @@
   hosts: R1
   gather_facts: false
   tasks:
-    - name: Config intf
+    - name: Configure intf
       cisco.ios.ios_config:
-        lines:
-          - descreption from ansible
-          # - ip address 100.3.3.1.255.255.255.0
-        parents: interface "{{ item }}"
+        src: templates/interface_config
       with_items: "{{ interface_list }}"
       register: intf_config
-
+      
     - name: Print Command Output
       ansible.builtin.debug:
         msg: "{{ intf_config }}"
