--- a/08_ios_resource_modules/02_ios_interfaces_module.yml
+++ b/08_ios_resource_modules/02_ios_interfaces_module.yml
@@ -17,8 +17,8 @@
     - name: Interface Config
       cisco.ios.ios_interfaces:
         config:
-          - name: GigabitEthernet0/0
-          - name: GigabitEthernet0/2
+          - name: FastEthernet0/1
+          - name: FastEthernet1/0
             description: new_desc1
             mtu: 1024
             enabled: true
@@ -34,8 +34,8 @@
     - name: Interface Config
       cisco.ios.ios_interfaces:
         config:
-          - name: GigabitEthernet0/0
-          - name: GigabitEthernet0/2
+          - name: FastEthernet0/1
+          - name: FastEthernet1/0
             description: new_desc1
             mtu: 1024
             enabled: true
